feat(style): change styling of page for visual appeal

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Hand:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="main">
@@ -29,12 +35,30 @@
         </div>
         <button id="btn" type="submit">Add</button>
       </form>
-      <div class="card">
-        <button class="delete">X</button>
-        <p>Name: RED DEAD REDEMPTION 2</p>
-        <p>Author: ROCKSTAR GAMES</p>
-        <p>Hours: 100+</p>
-        <button class="toggle-read">read</button>
+      <div class="grid-div">
+        <div class="card">
+          <button class="delete">X</button>
+          <p>Name: RED DEAD REDEMPTION 2</p>
+          <p>Author: ROCKSTAR GAMES</p>
+          <p>Hours: 100+</p>
+          <button class="toggle-read">read</button>
+        </div>
+
+        <div class="card">
+          <button class="delete">X</button>
+          <p>Name: Spiderman 2</p>
+          <p>Author: imsoniac</p>
+          <p>Hours: 200+</p>
+          <button class="toggle-read">read</button>
+        </div>
+
+        <div class="card">
+          <button class="delete">X</button>
+          <p>Name: Cola</p>
+          <p>Author: Coco-cola</p>
+          <p>Hours: 100+</p>
+          <button class="toggle-read">read</button>
+        </div>
       </div>
     </div>
   </body>
